--- a/application-heroku.properties
+++ b/application-heroku.properties
@@ -3,54 +3,52 @@ spring.datasource.url = ${DATASOURCE_URL}
 spring.datasource.username = ${DATASOURCE_USERNAME}
 spring.datasource.password = ${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name = ${DATASOURCE_JDBC_DRIVER}
-spring.datasource.maximum-pool-size: 6
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-localhost.url = jdbc:mysql://qzkp8ry756433yd4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/vtengrokzf1l11je
+spring.datasource.maximum-pool-size: ${DATASOURCE_POOL_SIZE}
+spring.jpa.properties.hibernate.dialect = ${HIBERNATE_DIALECT}
+localhost.url = ${JWT_SECRET}
 script.create = create database studhub
 script.drop = drop database studhub
 skip.db.init = true
 
 # App Properties
-studhub.app.jwtSecret=jwtStudHubSecretKey
+studhub.app.jwtSecret=${JWT_SECRET}
 # expires in a day
-studhub.app.accessTokenExpiration=86400
+studhub.app.accessTokenExpiration=${ACCESS_TOKEN_EXPIRATION}
 # expires in a 10 days
-studhub.app.refreshTokenExpiration=864000
+studhub.app.refreshTokenExpiration=${REFRESH_TOKEN_EXPIRATION}
 
 #Mail Properties
-spring.mail.host=smtp.mailgun.org
-spring.mail.username=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
-spring.mail.password=fa1923d7350cb2d054e43ae355943f6c-f877bd7a-9216bf15
-spring.mail.port=587
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-mail.debug=true
+spring.mail.host=${MAIL_HOST}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.port=${MAIL_PORT}
+spring.mail.protocol=${MAIL_PROTOCOL}
+spring.mail.properties.mail.smtp.auth=${MAIL_SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${MAIL_SMTP_STARTTLS_ENABLE}
+mail.debug=${MAIL_DEBUG}
 
 #Client Properties
-client.host=https://localhost:4200
-studhub.mail.noreply=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
-client.signature=postmaster@sandboxf99cefb451b34422943f3f31fbc5ca7e.mailgun.org
+client.host=${CLIENT_HOST}
+studhub.mail.noreply=${MAIL_USERNAME}
+client.signature=${MAIL_USERNAME}
 
 #Google Properties
-studhub.google.clientId=820600559774-rogh42iso9644ohsprs6g5grb828v20n.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.clientSecret=jOWf_-f1nAE4JrrV-jyZFZfJ
+studhub.google.clientId=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.clientSecret=${GOOGLE_CLIENT_SECRET}
 
 #Facebook Properties
-spring.social.facebook.appId=488187918662697
-spring.social.facebook.appSecret=f5652c746a040fb3e8b43a4c2ba285ad
+spring.social.facebook.appId=${FACEBOOK_APP_ID}
+spring.social.facebook.appSecret=${FACEBOOK_APP_SECRET}
 
 #Logging
 #Available profiles: file-debug, file-info, file-warn, console-warn, console-info (default spring output).
 #spring.profiles.active=console-info
 logging.file=app.log
 
-#cloud.name=${CLOUD_NAME}
-#api.key=${API_KEY}
-#api.secret=${API_SECRET}
+cloud.name=${CLOUD_NAME}
+api.key=${API_KEY}
+api.secret=${API_SECRET}
 
-cloud.name=studhubcloud
-api.key=728188731214736
-api.secret=8d9xEPsgdsDVGy71nWQxHZggOow
-cloudinary.url=cloudinary://728188731214736:8d9xEPsgdsDVGy71nWQxHZggOow@studhubcloud
-spring.servlet.multipart.max-file-size=4MB
+
+cloudinary.url=${CLOUDINARY_URL}
+spring.servlet.multipart.max-file-size=${MULTIPART_MAX_FILE_SIZE}
