--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url = ERROR
-spring.datasource.username = ERROR
-spring.datasource.password = ERROR
+spring.datasource.url = DEFAULT
+spring.datasource.username = DEFAULT
+spring.datasource.password = DEFAULT
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = ERROR
+spring.jpa.properties.hibernate.dialect = DEFAULT
 localhost.url = jdbc:mysql://localhost:3306/?serverTimezone=UTC
-script.create = ERROR
-script.drop = ERROR
+script.create = DEFAULT
+script.drop = DEFAULT
 skip.db.init = true
 
 
