--- a/pom.xml
+++ b/pom.xml
@@ -215,12 +215,14 @@
             <version>2.0.3.RELEASE</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+
+        <!-- https://mvnrepository.com/artifact/com.rometools/rome -->
         <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome</artifactId>
             <version>1.12.1</version>
         </dependency>
+
 
 
     </dependencies>
